--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@supabase/supabase-js": "^2.50.0",
+    "@vercel/node": "^5.3.11",
     "face-api.js": "^0.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
