--- a/package.json
+++ b/package.json
@@ -7,21 +7,28 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "gerar:usuarios": "node gerar-usuarios-reais.cjs",
+    "gerar:usuarios:50": "cross-env GERAR_QTD=50 node gerar-usuarios-reais.cjs"
   },
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@supabase/mcp-server-supabase": "^0.4.5",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/bcryptjs": "^2.4.6",
     "@vercel/node": "^5.3.11",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "face-api.js": "^0.22.2",
+    "lucide-react": "^0.539.0",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
