--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@sendgrid/mail": "^8.1.5",
     "@supabase/mcp-server-supabase": "^0.4.5",
     "@supabase/supabase-js": "^2.50.0",
     "@types/bcryptjs": "^2.4.6",
