--- a/package.json
+++ b/package.json
@@ -20,15 +20,21 @@
     "@supabase/mcp-server-supabase": "^0.4.5",
     "@supabase/supabase-js": "^2.50.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
+    "@types/mime-types": "^3.0.1",
     "@vercel/node": "^5.3.11",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "face-api.js": "^0.22.2",
+    "formidable": "^3.5.4",
     "lucide-react": "^0.539.0",
+    "mime-types": "^3.0.1",
+    "next": "^15.4.6",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "sonner": "^2.0.7"
   },
